2007-11-19  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/actor.hg: Commented-out the rotate_*() and get_r*_ang*() 
	methods which have been removed from clutter in svn.
	* examples/test-actors.cc: Used the C functions for now, because I am too 
	lazy to regenerate the .defs file.

2007-11-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/alpha.hg: add sigc::slot wrappers for all of the pre-defined
	alpha functions provided by clutter
	* clutter/src/alpha.ccg: Sink initially unowned ref in custom constructor,
	also define the pre-defined alpha slots
	* examples/test-actors.cc: update to use newly wrapped sine alpha func, also
	make the example generally more c++-ified

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm/init.cc: also initialize gdkmm so that we can use
	Gdk::Pixbuf properly
	* examples/test-actors.cc: added new test/example -- the one with the
	spinning openedhand logos.  There are a few things that are not wrapped and
	a couple of things print warnings on exit (indicating perhaps a reference
	counting issue or something), but for the most part things work so far.

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-scale.hg: fix the construction param names

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/clone-texture.hg: fixe CloneTexture so it actually works.
	Give it the write GType, fix the construct param property name

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/timeline.hg: add proper constructor -- there is no default
	constructor for Timeline

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm.h: update main super-header to include all of the new
	headers that we've added recently
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/clone-texture.ccg:
	* clutter/src/clone-texture.hg:
	* tools/m4/convert_cluttermm.m4: add initial implementation of CloneTexture
	class
