@@ -138,5 +138,6 @@ AC_OUTPUT([
     docs/reference/Doxyfile
 
   examples/Makefile
+  tests/Makefile
 ])
 :
