@@ -1,0 +1,8 @@
+SUBDIRS = 
+
+#EXTRA_DIST	=  Makefile.am_fragment README.txt
+
+include $(top_srcdir)/examples/Makefile.am_fragment
+
+noinst_PROGRAMS = test-alpha-creation
+test_alpha_creation_SOURCES = test-alpha-creation.cc
